Corrected an issue with the hero image not center aligned

--- a/public/less/elements.less
+++ b/public/less/elements.less
@@ -302,6 +302,9 @@ select.form-control {
 	}
 	.hero-image {
 		margin-top: 85px;
+		img {
+			margin: 0 auto;
+		}
 	}
 }
 .hero-title {
